Adding font family

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 
   
   <title>Frontend Mentor | Stats preview card component</title>
@@ -14,7 +15,7 @@
 <body>
   <main>
     <section class="caixa">
-      <h1 class="titulo">Get insights that help your business grow.</h1>
+      <h1 class="titulo">Get <strong style="color: blueviolet;">insights</strong> that help your business grow.</h1>
       <div class="texto">        
         <p class="texto__subtitulo">Discover the benefits of data analytics and make better decisions regarding revenue,costumer experience, and overall efficiency</p>
       </div>
